styles.css
* {
  margin: 0;
  background: transparent;
  text-align: center;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
}

html {
  height: 100%;
}

body {
  min-height: 100%;
  background:
    url(images/lines.png) no-repeat right 10% top 10%,
    url(images/polygon1.png) right 0% top 56px no-repeat,
    url(images/box1.png) 13.3px 184.2px no-repeat,
    url(images/polygon2.png) right 0 top 237.33px no-repeat,
    url(images/cylinder2.png) left 136.78px top 528.33px no-repeat,
    url(images/box2.png) left 0 top 510.22px no-repeat,
    url(images/cylinder1.png) left 322.56px top 668.69px no-repeat;
  background-size: contain, 62.96px, 28.45px, auto 150px, auto 16.27px, auto 79.49px, auto 38.49px;
}

header {
  display: flex;
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
}

header a {
  text-decoration: none;
  width: 90px;
  height: 28px;
  font-weight: 600;
  font-size: 20px;
  line-height: 28px;
  position: absolute;
  left: 24px;
  top: 10px;
  color: #28352f;
}

header nav {
  position: absolute;
  top: 16px;
  right: 28px;
  color: #28352f;
  cursor: pointer;
}

header ul {
  display: none;
}

.intro {
  display: flex;
  position: absolute;
  top: 112px;
  left: 24px;
  flex-direction: column;
}

.intro h1 {
  width: 100%;
  height: 192px;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
}

.intro h1 span {
  display: block;
  color: #36b37e;
}

.intro p {
  width: 95%;
  height: 164px;
  margin-top: 58px;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
}

#lines {
  display: block;
  position: absolute;
  top: 54.12px;
  left: 50%;
  transform: translate(-50%);
  background-color: transparent;
}

.icons {
  display: flex;
  position: absolute;
  top: 584px;
  left: 50%;
  transform: translate(-55%);
  height: 40px;
  width: 200px;
  justify-content: space-between;
  align-items: center;
}

.icons > * {
  background: transparent;
  height: 50%;
  width: 20px;
}

.action {
  position: absolute;
  top: 666px;
  left: 50%;
  transform: translate(-20%);
}

li {
  list-style-type: none;
}

#portfolio {
  display: grid;
  row-gap: 50px;
  grid-template-rows: 121px 474px 474px 474px;
  position: absolute;
  top: 728px;
  width: 100%;
}

.portfolio-item {
  display: flex;
  flex-direction: column;
  border-radius: 8px;
  background: #ebf0ee;
  border: 1px solid #d0d9d4;
  margin-left: 16px;
  margin-right: 30px;
}

.portfolio-item img {
  height: 252px;
}

.portfolio-item .portfolio-main {
  background: #ffff;
  border-radius: 8px;
  padding-top: 16px;
  padding-bottom: 24px;
}

.about-item ul {
  display: flex;
  gap: 8px;
  flex-wrap: wrap;
  height: 40px;
  padding: 0;
  margin-top: 24px;
  align-items: center;
  text-align: center;
  justify-content: center;
}

.portfolio-item .portfolio-main ul {
  display: flex;
  height: 32px;
  margin: 16px 0 29px -23px;
}

.about-item ul li {
  align-items: center;
  height: 40px;
  background: #fff;
  border-radius: 8px;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
  color: #36b37e;
  padding: 12px;
}

.portfolio-item .portfolio-main ul li {
  padding: 8px 12px;
  margin: 0 4px;
  border-radius: 4px;
  background: #ebf0ee;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.03em;
  color: #3a4a42;
}

.portfolio-item .portfolio-main button {
  padding: 12px;
  width: 122px;
  height: 48px;
  background: #36b37f;
  border-radius: 4px;
  color: #fff;
  border: none;
}

#portfolio h3 {
  display: block;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
}

#portfolio h3 #underline {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  width: 48px;
  margin-top: 24px;
  border-bottom: 4px solid #36b37e;
  border-radius: 24px;
}

#about {
  display: grid;
  grid-template-rows: 333px;
  row-gap: 50px;
  width: 100%;
  text-align: center;
  align-items: center;
  position: absolute;
  top: 4068px;
}

#about-heading {
  display: flex;
  flex-direction: column;
  width: 100%;
  text-align: center;
  align-items: center;
  background:
    url(images/about-bg1.png) right 0% top -50px no-repeat,
    url(images/about-bg2.png) left 0% bottom 0% no-repeat;
  background-size: 68px, 70.44px;
}

#about-heading h4 {
  width: 351px;
  height: 48px;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
}

.about-item p {
  width: 337px;
  height: 32px;
  font-weight: 600;
  font-size: 24px;
  line-height: 32px;
  text-align: center;
  color: #344563;
}

#about-heading p {
  width: 63.88%;
  height: 189px;
  font-weight: 400;
  font-size: 20px;
  line-height: 32px;
  color: #42526e;
  margin: 24px 12px;
}

#about-heading button {
  align-items: center;
  padding: 12px;
  gap: 10px;
  width: 159px;
  height: 48px;
  background: #36b37f;
  border-radius: 4px;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  letter-spacing: 0.03em;
  color: #fff;
  border: none;
}

#about-main {
  display: flex;
  flex-direction: column;
  gap: 24px;
  align-items: center;
}

.about-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  background: #ebf0ee;
  border: 1px solid #c1c7d0;
  border-radius: 8px;
  padding-top: 40px;
  width: 327px;
  height: 352px;
}

.about-item img {
  width: 128px;
}

#contact {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  justify-content: center;
  position: absolute;
  top: 5607px;
  background: url(images/footer.png) right 0 top 600px no-repeat;
  background-size: 60px;
}

#contact p {
  width: 87.2%;
  height: 363px;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  text-align: center;
  color: #172b4d;
  margin-bottom: 58px;
}

form input,
textarea {
  width: 327px;
  margin-bottom: 24px;
  min-height: 48px;
  padding-left: 16px;
  border: 1px solid #d0d9d4;
  border-radius: 4px;
  text-align: left;
}

input:focus,
textarea:focus {
  outline: none;
  border: 1px solid #60c095;
  border-radius: 4px;
}

form input[type=submit] {
  width: 129px;
  height: 48px;
  margin-top: 24px;
  font-weight: 500;
  font-size: 17px;
  color: #fff;
  background: #36b37f;
  border-radius: 4px;
}

#contact .icons {
  position: absolute;
  top: 802px;
}

#footer-email {
  position: absolute;
  top: 6460px;
  left: 50%;
  transform: translate(-50%);
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 32px;
  text-align: center;
  color: #42526e;
}

/* Media Queries */

@media only screen and (min-width: 768px) {
  body {
    background:
      url(images/desktopBg.png) no-repeat,
      url(images/deskFormBg1.png) no-repeat left 0% top 3422px,
      url(images/deskFormBg2.png) no-repeat left 19% top 3584px,
      url(images/deskFormBg3.png) no-repeat right 0% top 3278.3px;
    background-size: cover, 200px, 102px, 214px;
  }

  header nav,
  header a {
    display: none;
  }

  header ul {
    display: flex;
    position: absolute;
    top: 16px;
    left: 50%;
    transform: translate(-50%);
    text-align: center;
    align-items: center;
    justify-content: space-between;
    width: 255px;
  }

  .intro {
    all: unset;
    position: absolute;
    top: 232px;
    left: 50%;
    transform: translate(-50%);
    width: 63.89%;
    background-color: transparent;
  }

  .intro h1 {
    all: unset;
    height: 114px;
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 48px;
    line-height: 60px;
    text-align: center;
    letter-spacing: 0.37px;
    background-color: transparent;
  }

  .intro p {
    all: unset;
    height: 96px;
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 32px;
    text-align: center;
    background-color: transparent;
  }

  #line-break::after {
    content: "\a";
    white-space: pre;
  }

  #line-break::before {
    content: "\a";
    white-space: pre;
  }

  .icons {
    position: absolute;
    top: 490px;
    background-color: transparent;
  }

  .action {
    position: absolute;
    top: 604px;
  }

  #portfolio {
    position: absolute;
    top: 1139px;
    left: 50%;
    transform: translate(-50%);
    grid-template-columns: 33% 33% 33%;
    width: 1171px;
    column-gap: 0;
    background-color: transparent;
  }

  #portfolio h3 {
    grid-column-start: 1;
    grid-column-end: 4;
  }

  #about {
    position: absolute;
    top: 2411px;
    left: 50%;
    transform: translate(-50%);
    width: 100%;
  }

  #about-heading p {
    height: 92px;
  }

  #break::before {
    content: "\a";
    white-space: pre;
  }

  #about-main {
    position: absolute;
    top: 350px;
    left: 50%;
    transform: translate(-50%);
    flex-direction: row;
  }

  #about-heading {
    background:
      url(images/aboutDesktop1.png) right 0% top -50px no-repeat,
      url(images/aboutDesktop2.png) left 0% bottom 0% no-repeat;
    background-size: auto, 288px;
  }

  .about-item {
    width: 369px;
    padding-left: 13px;
    padding-right: 13px;
  }

  #contact {
    top: 3219px;
    left: 50%;
    transform: translate(-50%);
    flex-direction: row;
    gap: 24px;
    max-width: 1171px;
    align-items: center;
    padding-bottom: 200px;
    border-bottom: 1px solid #dfe1e6;
  }

  #contact p {
    max-width: 463px;
    height: 256px;
    font-weight: 700;
    font-size: 30px;
    line-height: 52px;
    align-items: center;
  }

  #contact form {
    width: 684px;
    display: flex;
    flex-direction: column;
  }

  form input,
  textarea {
    width: 100%;
  }

  #contact .icons {
    top: 571px;
  }

  #footer-email {
    display: none;
  }
}

